--- a/index.html
+++ b/index.html
@@ -5,15 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <title>Document</title>
 </head>
+
+<header id = header>
+    <h1>Weather Dashboard</h1>
+</header>
+
 <body>
 
+    <main>
+        <aside>
+            <h2>Search for a City</h2>
+            <input type="text" placeholder="e.g. London" />
+            <button class="btn btn-lg btn-primary" type="button">Search</button>
+            <hr id="asideLine"/>
+
+            <div id="searchHistory">
+                <button>Result 1</button>
+                <button>Result 1</button>
+                <button>Result 1</button>
+                <button>Result 1</button>
+                <button>Result 1</button>
+            </div>
+        </aside>
+
+        <div id="resultsContainer">
+            <article id="currentWeather">
+                <h2 id="currentCityDate">London Exmaple</h2>
+                <p id="temp">Temp: 5</p>
+                <p id="wind">Wind: 11mph</p>
+                <p id="humidity">Humidity: 59%</p>
+            </article>
+
+            <div id="fiveDayContainer">
+                <h3>5-Day Forecast</h3>
+                <div class="card text-white bg-primary mb-3" style="max-width: 20%;">
+                    <div class="card-header">28/1/2023</div>
+                    <div class="card-body">
+                      <p class="card-text">Temp: 15.6</p>
+                      <p class="card-text">Wind: 15.6mph</p>
+                      <p class="card-text">Humidity: 59%</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
 
 
 
 
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script> <!-- Moment JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script> <!-- Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script> <!-- BootStrap -->
