Script: User search term is sent to GeoAPI for lon and lat then stroed as an object in cityData

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 
     <main>
         <aside>
-            <h2>Search for a City</h2>
-            <input type="text" placeholder="e.g. London" />
-            <button class="btn btn-lg btn-primary" type="button">Search</button>
+            <form>
+                <h2>Search for a City</h2>
+                <input id="searchBox" type="text" placeholder="e.g. London" />
+                <button id="searchButton" class="btn btn-lg btn-primary" type="button">Search</button>
+            </form>
+            
             <hr id="asideLine"/>
 
             <div id="searchHistory">
