dynmically updating current day's forecast using API data. Had to add a delay timer to the forecast api as the response was quicker than the geolocation API which has to operate first

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input id="searchBox" type="text" placeholder="e.g. London" />
                 <button id="searchButton" class="btn btn-lg btn-primary" type="button">Search</button>
             </form>
-            
+
             <hr id="asideLine"/>
 
             <div id="searchHistory">
@@ -36,10 +36,10 @@
 
         <div id="resultsContainer">
             <article id="currentWeather">
-                <h2 id="currentCityDate">London Exmaple</h2>
-                <p id="temp">Temp: 5</p>
-                <p id="wind">Wind: 11mph</p>
-                <p id="humidity">Humidity: 59%</p>
+                <h2 id="forecastToday"></h2>
+                <p id="temp"></p>
+                <p id="wind"></p>
+                <p id="humidity"></p>
             </article>
 
             <div id="fiveDayContainer">
