--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div id="resultsContainer">
             <article id="currentWeather">
-                <h2 id="forecastToday"></h2>
+                <h2 id="forecastToday">Search a city to see today's forecast here</h2>
                 <p id="temp"></p>
                 <p id="wind"></p>
                 <p id="humidity"></p>
