--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
         <div id="resultsContainer">
             <article id="currentWeather">
-                <h2 id="forecastToday">Search a city to see today's forecast here</h2>
-                <p id="temp"></p>
-                <p id="wind"></p>
-                <p id="humidity"></p>
+                <h2 id="cityTitle">Search a city to see today's forecast here <i id="titleIcon"></i></h2>
+                <p id="currentTemp"></p>
+                <p id="currentWind"></p>
+                <p id="currentHumidity"></p>
             </article>
 
             <div id="fiveDayContainer">
@@ -56,7 +56,6 @@
 
         </div>
     </main>
-
 
 
 
