appending 5-day data from api to cards 5 day forecast but a complication arose in that the data is 3-hourly so can't just iterate over the first 5 items! Have to now create an argument to only get certain arrays if they contain a certain time and are in the future

--- a/index.html
+++ b/index.html
@@ -42,15 +42,10 @@
                 <p id="currentHumidity"></p>
             </article>
 
-            <div id="fiveDayContainer">
+            <div id="fiveDayContainer" class="container">
                 <h3>5-Day Forecast</h3>
-                <div class="card text-white bg-primary mb-3" style="max-width: 20%;">
-                    <div class="card-header">28/1/2023</div>
-                    <div class="card-body">
-                      <p class="card-text">Temp: 15.6</p>
-                      <p class="card-text">Wind: 15.6mph</p>
-                      <p class="card-text">Humidity: 59%</p>
-                    </div>
+                <div id="cardContainer" class="row">
+                   
                 </div>
             </div>
 
