--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div id="resultsContainer">
             <article id="currentWeather">
-                <h2 id="cityTitle">Search a city to see today's forecast here <i id="titleIcon"></i></h2>
+                <h2 id="cityTitle">Search a city to see today's forecast here <img id="titleIcon" /></h2>
                 <p id="currentTemp"></p>
                 <p id="currentWind"></p>
                 <p id="currentHumidity"></p>
