--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <form>
                 <h2>Search for a City</h2>
                 <input id="searchBox" type="text" placeholder="e.g. London" />
-                <button id="searchButton" class="btn btn-lg btn-primary" type="button">Search</button>
+                <button id="searchButton" class="btn btn-lg btn-primary" type="submit">Search</button>
+                <button class="btn btn-dark btn-sm" id="clearHistory" type="submit">Clear History</button>
             </form>
 
             <hr id="asideLine"/>
