all styles added and UX improved slightly including a nicer display for the search history buttons as I don't like the one on the mockup

--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     <main>
         <aside>
             <form>
-                <h2>Search for a City</h2>
+                <h2>Search for a City:</h2>
                 <input id="searchBox" type="text" placeholder="e.g. London" />
                 <button id="searchButton" class="btn btn-lg btn-primary" type="submit">Search</button>
                 <button class="btn btn-dark btn-sm" id="clearHistory" type="submit">Clear History</button>
             </form>
 
             <hr id="asideLine"/>
-
+            <h4>Search History:</h4>
             <div id="searchHistory">
+
 
             </div>
         </aside>
@@ -40,7 +41,7 @@
             </article>
 
             <div id="fiveDayContainer" class="container">
-                <h3>5-Day Forecast</h3>
+                <h3>5-Day Forecast:</h3>
                 <div id="cardContainer" class="row">
                    
                 </div>
